test deploy pages

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
   <!-- Home -->
   <section id="home">
-    <h1>Bienvenue sur mon Portfolio</h1>
+    <h1> “Bienvenue 👋 sur le Portfolio de Colombe</h1>
     <div class="scene">
       <div class="cube"></div>
     </div>
