--- a/index.html
+++ b/index.html
@@ -1,206 +1,530 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio & TD CI/CD</title>
+  <title>Colombe | Future Experience</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
   <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(to right, #f0f8ff, #ffe4e1);
-      color: #333;
-      scroll-behavior: smooth;
-      margin: 0;
+    :root {
+      /* Palette Home (Default) */
+      --bg-color: #1a0b2e;
+      --accent: #00f3ff;
+      --text-white: #ffffff;
+      --text-gray: #b3b3b3;
     }
 
-    header {
-      background: #fff;
-      padding: 20px 0;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      position: sticky;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-white);
+      overflow: hidden;
+      height: 100vh;
+      transition: background-color 1s ease;
+      /* Fluid transition for background */
+    }
+
+    /* 3D Canvas */
+    #canvas-container {
+      position: fixed;
       top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      pointer-events: none;
+    }
+
+    /* Navigation */
+    header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding: 30px 5%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       z-index: 100;
     }
 
-    .menu {
-      list-style: none;
+    .logo {
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: var(--text-white);
+    }
+
+    .logo span {
+      color: var(--accent);
+      transition: color 1s;
+    }
+
+    nav ul {
       display: flex;
-      justify-content: center;
-      gap: 40px;
+      list-style: none;
+      gap: 30px;
     }
 
-    .menu li a {
+    nav a {
       text-decoration: none;
-      font-weight: bold;
-      color: #ff6f61;
-      padding: 10px 20px;
-      border-radius: 20px;
-      transition: all 0.3s;
+      color: var(--text-white);
+      font-weight: 500;
+      cursor: pointer;
+      transition: color 0.3s;
     }
 
-    .menu li a:hover {
-      background: #ff6f61;
-      color: #fff;
+    nav a:hover,
+    nav a.active {
+      color: var(--accent);
+    }
+
+    /* Content Containers */
+    main {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      z-index: 10;
     }
 
     section {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: grid;
+      grid-template-columns: 1.2fr 1fr;
       align-items: center;
-      text-align: center;
-      padding: 50px 20px;
+      padding: 0 5%;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.5s ease-in-out, visibility 0.5s;
+      pointer-events: none;
+    }
+
+    section.active {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: auto;
+    }
+
+    /* Left Content Styling */
+    .content-left {
+      padding-right: 50px;
     }
 
     h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
-      color: #ff6f61;
+      font-size: 3.5rem;
+      font-weight: 700;
+      line-height: 1.2;
+      margin-bottom: 10px;
     }
 
     h2 {
-      color: #ff6f61;
+      font-size: 2.5rem;
+      font-weight: 700;
       margin-bottom: 20px;
     }
 
-    p {
-      font-size: 1.2em;
-      max-width: 700px;
+    h2 span {
+      color: var(--accent);
+      transition: color 1s;
     }
 
-    /* Boule 3D */
-    .scene {
-      perspective: 600px;
-      width: 150px;
-      height: 150px;
-      margin: 50px auto;
+    .cta-buttons {
+      display: flex;
+      gap: 20px;
+      margin-top: 30px;
     }
 
-    .cube {
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle, #ff6f61, #ffa07a);
-      border-radius: 50%;
-      animation: rotate 15s linear infinite;
-      transform-style: preserve-3d;
+    .btn {
+      padding: 12px 30px;
+      border-radius: 5px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: 0.3s;
+      cursor: pointer;
     }
 
-    @keyframes rotate {
-      0% { transform: rotateY(0deg) rotateX(0deg); }
-      100% { transform: rotateY(360deg) rotateX(360deg); }
+    .btn-primary {
+      background-color: var(--accent);
+      color: #000;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+      border: none;
     }
 
-    /* Table TD */
-    table {
-      width: 90%;
-      max-width: 900px;
-      border-collapse: collapse;
-      margin: 30px auto;
-      background: #fff;
+    .btn-secondary {
+      background: transparent;
+      color: var(--text-white);
+      border: 2px solid var(--accent);
+    }
+
+    /* Unique Section Styles */
+
+    /* SERVICES (Orange) */
+    #services .card-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .service-card {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 20px;
       border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-left: 3px solid var(--accent);
     }
 
-    th, td {
-      border: 1px solid #ddd;
+    /* PORTFOLIO (Pink) */
+    #portfolio .project-list {
+      margin-top: 30px;
+    }
+
+    .project-item {
+      margin-bottom: 15px;
       padding: 15px;
-      text-align: left;
+      background: rgba(0, 0, 0, 0.3);
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
     }
 
-    th {
-      background: #ff6f61;
-      color: #fff;
+    .project-number {
+      font-size: 2rem;
+      font-weight: bold;
+      color: var(--accent);
+      margin-right: 20px;
     }
 
-    td ul {
-      padding-left: 20px;
+    /* CONTACT (Green) */
+    .contact-form {
+      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 400px;
     }
 
-    td ul li {
-      margin-bottom: 5px;
+    input,
+    textarea {
+      padding: 15px;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      color: white;
+      border-radius: 5px;
+      outline: none;
     }
 
-    @media (max-width: 600px) {
-      .menu {
-        flex-direction: column;
-        gap: 15px;
+    input:focus,
+    textarea:focus {
+      border-color: var(--accent);
+    }
+
+    /* Mobile */
+    @media (max-width: 900px) {
+      section {
+        grid-template-columns: 1fr;
+        text-align: center;
+        padding-top: 80px;
+      }
+
+      .content-left {
+        padding-right: 0;
+      }
+
+      .cta-buttons {
+        justify-content: center;
+      }
+
+      nav {
+        display: none;
       }
     }
   </style>
 </head>
+
 <body>
 
-  <!-- Menu -->
+  <div id="canvas-container"></div>
+
   <header>
+    <div class="logo">Colombe<span>.</span></div>
     <nav>
-      <ul class="menu">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#td">TD CI/CD</a></li>
+      <ul>
+        <li><a onclick="goTo('home')" class="active" id="nav-home">Home</a></li>
+        <li><a onclick="goTo('services')" id="nav-services">Services</a></li>
+        <li><a onclick="goTo('portfolio')" id="nav-portfolio">Portfolio</a></li>
+        <li><a onclick="goTo('contact')" id="nav-contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Home -->
-  <section id="home">
-    <h1> “Bienvenue 👋 sur le Portfolio de Colombe</h1>
-    <div class="scene">
-      <div class="cube"></div>
-    </div>
-    <p>Je crée des sites web modernes, colorés et interactifs, et je maîtrise les pipelines CI/CD.</p>
-  </section>
+  <main>
+    <!-- HOME : THE ORIGINAL (Violet/Cyan) -->
+    <section id="home" class="active">
+      <div class="content-left">
+        <h1>Hi! I'm Colombe</h1>
+        <h2>Frontend <span>Developer</span></h2>
+        <p style="color: #b3b3b3; max-width: 500px;">
+          Designing the future of web interfaces with passion and code.
+          Specialized in UI/UX, CI/CD and 3D Experiences.
+        </p>
+        <div class="cta-buttons">
+          <a onclick="goTo('portfolio')" class="btn btn-primary">My Work</a>
+          <a onclick="goTo('contact')" class="btn btn-secondary">Hire Me</a>
+        </div>
+      </div>
+      <!-- 3D Right is handled by JS -->
+    </section>
 
-  <!-- Services -->
-  <section id="services">
-    <h2>Services</h2>
-    <p>Développement web, design UI/UX, intégration CI/CD, Dockerisation, et plus encore !</p>
-  </section>
+    <!-- SERVICES : THE ARCHITECT (Blue/Orange) -->
+    <section id="services">
+      <div class="content-left">
+        <h1>My Expertise</h1>
+        <h2>Creative <span>Solutions</span></h2>
+        <div class="card-grid">
+          <div class="service-card">
+            <h3>Web Development</h3>
+            <p style="font-size:0.8rem; margin-top:5px;">React, Vue, Three.js mastery.</p>
+          </div>
+          <div class="service-card">
+            <h3>CI/CD DevOps</h3>
+            <p style="font-size:0.8rem; margin-top:5px;">Automated pipelines & Docker.</p>
+          </div>
+          <div class="service-card">
+            <h3>UI/UX Design</h3>
+            <p style="font-size:0.8rem; margin-top:5px;">Figma to Code pixel perfect.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <!-- Contact -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: colombe@example.com</p>
-    <p>Téléphone: +241 00 00 00 00</p>
-  </section>
+    <!-- PORTFOLIO : THE GALLERY (Dark/Pink) -->
+    <section id="portfolio">
+      <div class="content-left">
+        <h1>Selected Work</h1>
+        <h2>Recent <span>Projects</span></h2>
+        <div class="project-list">
+          <div class="project-item">
+            <span class="project-number">01</span>
+            <div>
+              <h4>E-Commerce 3D</h4>
+              <p style="font-size:0.8rem;">Next.js + WebGL</p>
+            </div>
+          </div>
+          <div class="project-item">
+            <span class="project-number">02</span>
+            <div>
+              <h4>SaaS Dashboard</h4>
+              <p style="font-size:0.8rem;">Vue.js + Firebase</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <!-- TD CI/CD -->
-  <section id="td">
-    <h2>TD : Mise en place d’un pipeline CI/CD</h2>
-    <table>
-      <tr>
-        <th>Objectif</th>
-        <td>
-          Mettre en œuvre les bases du DevOps en utilisant GitHub pour :
-          <ul>
-            <li>Versionner le code</li>
-            <li>Automatiser les tests</li>
-            <li>Construire et publier une image Docker</li>
-            <li>Déployer automatiquement une application</li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <th>Contexte</th>
-        <td>Petite équipe de développement, pipeline DevOps complet pour une application Web simple.</td>
-      </tr>
-      <tr>
-        <th>Tâches</th>
-        <td>
-          <ul>
-            <li>Initialiser le projet et dépôt GitHub (branches main/dev)</li>
-            <li>Mettre en place workflow CI (tests, build, logs)</li>
-            <li>Dockeriser et tester l'image</li>
-            <li>Publier l’image Docker via GitHub Actions</li>
-            <li>Déploiement automatique (GitHub Pages, VPS ou plateforme cloud)</li>
-            <li>Bonus : stratégie de branches, tests avancés, badges README</li>
-          </ul>
-        </td>
-      </tr>
-    </table>
-  </section>
+    <!-- CONTACT : THE SIGNAL (Dark/Green) -->
+    <section id="contact">
+      <div class="content-left">
+        <h1>Start a Project</h1>
+        <h2>Let's <span>Connect</span></h2>
+        <div class="contact-form">
+          <input type="text" placeholder="Your Name">
+          <input type="email" placeholder="Email Address">
+          <button class="btn btn-primary">Send Message</button>
+        </div>
+      </div>
+    </section>
+  </main>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+
+  <script>
+    // --- CONFIGURATION ---
+    const colors = {
+      home: { bg: '#1a0b2e', accent: '#00f3ff' },      // Purple / Cyan
+      services: { bg: '#0b1e2e', accent: '#ff9f43' },  // Deep Blue / Orange
+      portfolio: { bg: '#2e0b1f', accent: '#ff6b81' }, // Deep Red / Pink
+      contact: { bg: '#0b2e16', accent: '#2ed573' }    // Deep Green / Emerald
+    };
+
+    // --- THREE.JS SETUP ---
+    const container = document.getElementById('canvas-container');
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.z = 8;
+    camera.position.x = -4; // Offset for split screen
+
+    const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+    container.appendChild(renderer.domElement);
+
+    // --- SCENE GROUPS ---
+    const homeGroup = new THREE.Group();
+    const servicesGroup = new THREE.Group();
+    const portfolioGroup = new THREE.Group();
+    const contactGroup = new THREE.Group();
+
+    scene.add(homeGroup);
+    scene.add(servicesGroup);
+    scene.add(portfolioGroup);
+    scene.add(contactGroup);
+
+    // 1. HOME SCENE (Cyan Sphere - The Original)
+    const homeGeo = new THREE.IcosahedronGeometry(2.5, 2);
+    const homeMat = new THREE.MeshBasicMaterial({ color: 0x00f3ff, wireframe: true, transparent: true, opacity: 0.3 });
+    const homeMesh = new THREE.Mesh(homeGeo, homeMat);
+    const homeRings = new THREE.Mesh(new THREE.TorusGeometry(3.5, 0.02, 16, 100), new THREE.MeshBasicMaterial({ color: 0xbc13fe }));
+    homeRings.rotation.x = 1.5;
+    homeGroup.add(homeMesh, homeRings);
+
+    // 2. SERVICES SCENE (Orange floating Cubes)
+    // Creating a cloud of cubes
+    for (let i = 0; i < 50; i++) {
+      const size = Math.random() * 0.5;
+      const cube = new THREE.Mesh(
+        new THREE.BoxGeometry(size, size, size),
+        new THREE.MeshBasicMaterial({ color: 0xff9f43, wireframe: true })
+      );
+      cube.position.set((Math.random() - 0.5) * 10, (Math.random() - 0.5) * 10, (Math.random() - 0.5) * 5);
+      cube.rotation.set(Math.random(), Math.random(), Math.random());
+      servicesGroup.add(cube);
+    }
+    servicesGroup.visible = false;
+
+    // 3. PORTFOLIO SCENE (Pink Planes/Screens)
+    const planeGeo = new THREE.PlaneGeometry(3, 2);
+    for (let i = 0; i < 5; i++) {
+      const plane = new THREE.Mesh(
+        planeGeo,
+        new THREE.MeshBasicMaterial({ color: 0xff6b81, side: THREE.DoubleSide, transparent: true, opacity: 0.6 })
+      );
+      plane.position.y = (i - 2) * 1.5;
+      plane.position.x = (i % 2 === 0) ? 1 : -1;
+      plane.rotation.y = (i % 2 === 0) ? -0.2 : 0.2;
+      portfolioGroup.add(plane);
+    }
+    portfolioGroup.visible = false;
+
+    // 4. CONTACT SCENE (Green Connected Network)
+    const contactGeo = new THREE.IcosahedronGeometry(3, 1);
+    const contactMat = new THREE.MeshBasicMaterial({ color: 0x2ed573, wireframe: true });
+    const contactMesh = new THREE.Mesh(contactGeo, contactMat);
+    contactGroup.add(contactMesh);
+    // Add particles inside
+    const particles = new THREE.Points(
+      new THREE.BufferGeometry().setAttribute('position', new THREE.Float32BufferAttribute(new Array(300).fill(0).map(() => (Math.random() - 0.5) * 5), 3)),
+      new THREE.PointsMaterial({ color: 0xffffff, size: 0.05 })
+    );
+    contactGroup.add(particles);
+    contactGroup.visible = false;
+
+
+    // --- ANIMATION LOOP ---
+    function animate() {
+      requestAnimationFrame(animate);
+
+      // Animate Home
+      if (homeGroup.visible) {
+        homeMesh.rotation.y -= 0.005;
+        homeRings.rotation.x += 0.01;
+      }
+
+      // Animate Services
+      if (servicesGroup.visible) {
+        servicesGroup.rotation.y += 0.002;
+        servicesGroup.children.forEach(cube => {
+          cube.rotation.x += 0.01;
+          cube.rotation.y += 0.01;
+        });
+      }
+
+      // Animate Portfolio
+      if (portfolioGroup.visible) {
+        portfolioGroup.rotation.y = Math.sin(Date.now() * 0.0005) * 0.2;
+        portfolioGroup.children.forEach((plane, i) => {
+          plane.position.y += Math.sin(Date.now() * 0.002 + i) * 0.005;
+        });
+      }
+
+      // Animate Contact
+      if (contactGroup.visible) {
+        contactMesh.rotation.x += 0.002;
+        contactMesh.rotation.y += 0.002;
+        particles.rotation.y -= 0.001;
+      }
+
+      renderer.render(scene, camera);
+    }
+    animate();
+
+
+    // --- NAVIGATION LOGIC ---
+    let currentSection = 'home';
+
+    window.goTo = function (sectionId) {
+      if (currentSection === sectionId) return;
+
+      // 1. Update Colors
+      const palette = colors[sectionId];
+      document.documentElement.style.setProperty('--bg-color', palette.bg);
+      document.documentElement.style.setProperty('--accent', palette.accent);
+
+      // 2. Update UI (Active States)
+      document.querySelectorAll('nav a').forEach(el => el.classList.remove('active'));
+      document.getElementById('nav-' + sectionId).classList.add('active');
+
+      document.querySelectorAll('section').forEach(el => el.classList.remove('active'));
+      document.getElementById(sectionId).classList.add('active');
+
+      // 3. Switch 3D Scenes (with GSAP)
+      const oldGroup = getGroup(currentSection);
+      const newGroup = getGroup(sectionId);
+
+      // Out: Scale down and hide
+      gsap.to(oldGroup.scale, {
+        duration: 0.5, x: 0, y: 0, z: 0, onComplete: () => {
+          oldGroup.visible = false;
+          oldGroup.scale.set(1, 1, 1); // Reset for next time
+        }
+      });
+
+      // In: Make visible and scale up
+      newGroup.visible = true;
+      newGroup.scale.set(0, 0, 0);
+      gsap.to(newGroup.scale, { duration: 1, x: 1, y: 1, z: 1, ease: "back.out(1.7)", delay: 0.3 });
+
+      currentSection = sectionId;
+    }
+
+    function getGroup(id) {
+      if (id === 'home') return homeGroup;
+      if (id === 'services') return servicesGroup;
+      if (id === 'portfolio') return portfolioGroup;
+      if (id === 'contact') return contactGroup;
+    }
+
+    // --- RESPONSIVE ---
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      if (window.innerWidth < 900) camera.position.x = 0; else camera.position.x = -4;
+    });
+
+  </script>
 </body>
+
 </html>
